--- a/index.html
+++ b/index.html
@@ -59,12 +59,10 @@
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
         #sidePanel {
-            position: fixed;
+            position: absolute;
             top: 10px;
             right: 10px;
             width: 300px;
-            max-height: 90vh;
-            overflow-y: auto;
             background: rgba(255, 255, 255, 0.9);
             padding: 10px;
             border-radius: 5px;
@@ -73,9 +71,8 @@
         }
     </style>
 </head>
-
 <body>
-    <svg></svg> <!-- Initial SVG element -->
+    <svg></svg> <!-- Added SVG element -->
     <div id="controls">
         <label for="categoryFilter">Filter by Category:</label>
         <select id="categoryFilter">
@@ -94,7 +91,7 @@
 
     <div id="sidePanel">
         <strong>Article Details</strong>
-        <button id="closePanel" style="float: right;">X</button>
+        <button id="closePanel" style="float: right;">X</button> <!-- Close button -->
         <div id="articleDetails"></div>
     </div>
 
@@ -124,7 +121,10 @@
                     graph.nodes.forEach(node => {
                         if (!isValidYear(node.year)) {
                             console.warn(`Invalid year value for node ${node.label}: ${node.year}`);
-                            node.year = "N/A";
+                            node.year = "N/A"; // Set invalid years to "N/A"
+                        }
+                        if (!node.id) {
+                            node.id = `node-${graph.nodes.indexOf(node)}`; // Assign unique ID if missing
                         }
                     });
 
@@ -148,11 +148,18 @@
                 .attr("width", width)
                 .attr("height", height)
                 .call(d3.zoom().scaleExtent([0.5, 5]).on("zoom", function(event) {
-                    g.attr("transform", event.transform);
+                    g.attr("transform", event.transform); // Zoom and Pan Controls
                 }))
                 .append("g");
 
             const g = svg.append("g");
+
+            // Add glow filter for nodes
+            svg.append("defs").append("filter")
+                .attr("id", "glow")
+                .append("feGaussianBlur")
+                .attr("stdDeviation", 3)
+                .attr("result", "coloredBlur");
 
             // Add gradient for root node
             svg.append("defs").append("linearGradient")
@@ -170,13 +177,16 @@
 
             // Adjust forces for better spacing
             const simulation = d3.forceSimulation(graph.nodes)
-                .force("link", d3.forceLink(graph.links).id(d => d.id).distance(200))
-                .force("charge", d3.forceManyBody().strength(-600))
-                .force("collision", d3.forceCollide().radius(30))
+                .force("link", d3.forceLink(graph.links).id(d => d.id).distance(200)) // Increase link distance
+                .force("charge", d3.forceManyBody().strength(-600)) // Stronger repulsion
+                .force("collision", d3.forceCollide().radius(d => 
+                    d.label === "Understanding cybersecurity..." ? 30 : 15
+                )) // Prevent overlapping
                 .force("center", d3.forceCenter(width / 2, height / 2));
 
-            // Define color scale
-            const colorScale = d3.scaleOrdinal(d3.schemeCategory10);
+            // Define color scale based on modularity or another unique property
+            const colorScale = d3.scaleOrdinal(d3.schemeCategory10)
+                .domain(graph.nodes.map(d => d.modularity)); // Use modularity for coloring
 
             // Extract unique categories for filtering
             const categories = [...new Set(graph.nodes.map(d => d.modularity))];
@@ -192,16 +202,21 @@
                 .data(graph.links)
                 .enter().append("path")
                 .attr("class", "link")
-                .attr("stroke-dasharray", d => (d.source.label === "Understanding cybersecurity..." || d.target.label === "Understanding cybersecurity...") ? "5,5" : "none")
-                .attr("stroke", d => (d.source.label === "Understanding cybersecurity..." || d.target.label === "Understanding cybersecurity...") ? "red" : "#aaa");
+                .attr("stroke-dasharray", d => 
+                    (d.source.label === "Understanding cybersecurity..." || d.target.label === "Understanding cybersecurity...") ? "5,5" : "none"
+                )
+                .attr("stroke", d => 
+                    (d.source.label === "Understanding cybersecurity..." || d.target.label === "Understanding cybersecurity...") ? "red" : "#aaa"
+                );
 
             // Draw nodes with gradients and shapes
-            let isLarge = false;
+            let isLarge = false; // Default to small nodes
             const node = g.selectAll(".node")
                 .data(graph.nodes)
                 .enter().append("circle")
-                .attr("r", d => d.label === "Understanding cybersecurity..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10))
-                .attr("fill", d => d.label === "Understanding cybersecurity..." ? "url(#root-gradient)" : colorScale(d.modularity || 0))
+                .attr("r", d => d.label === "Understanding cybersecurity..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10)) // Root node is 2x larger
+                .attr("fill", d => d.label === "Understanding cybersecurity..." ? "url(#root-gradient)" : colorScale(d.modularity)) // Node colors
+                .attr("filter", "url(#glow)") // Node Glow
                 .attr("class", "node")
                 .call(d3.drag()
                     .on("start", dragStarted)
@@ -227,21 +242,21 @@
             // Interactive Animations
             node.on("mouseover", function(event, d) {
                 tooltip.style("opacity", 1)
-                    .html(`<strong>${d.label || "Unknown"}</strong><br>Author: ${d.authors || "Unknown"}<br>Year: ${d.year || "N/A"}`)
+                    .html(`<strong>${d.label}</strong><br>Author: ${d.authors || "Unknown"}<br>Year: ${d.year || "N/A"}`)
                     .style("left", (event.pageX + 10) + "px")
                     .style("top", (event.pageY - 10) + "px");
                 d3.select(this).transition()
                     .duration(200)
-                    .attr("r", d => d.label === "Understanding cybersecurity..." ? (isLarge ? 35 : 25) : (isLarge ? 20 : 15));
-                label.filter(labelD => labelD === d)
-                    .style("visibility", "visible");
+                    .attr("r", d => d.label === "Understanding cybersecurity..." ? (isLarge ? 35 : 25) : (isLarge ? 20 : 15)); // Enlarge node on hover
+                label.filter(label => label.id === d.id)
+                    .style("visibility", "visible"); // Show label on hover
             }).on("mouseout", function(event, d) {
                 tooltip.style("opacity", 0);
                 d3.select(this).transition()
                     .duration(200)
-                    .attr("r", d => d.label === "Understanding cybersecurity..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10));
-                label.filter(labelD => labelD === d)
-                    .style("visibility", "hidden");
+                    .attr("r", d => d.label === "Understanding cybersecurity..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10)); // Reset node size
+                label.filter(label => label.id === d.id)
+                    .style("visibility", "hidden"); // Hide label on mouseout
             });
 
             // Filtering by category
@@ -268,7 +283,7 @@
             node.on("click", function(event, d) {
                 sidePanel.style("display", "block");
                 articleDetails.html(`
-                    <strong>${d.label || "Unknown"}</strong><br>
+                    <strong>${d.label}</strong><br>
                     Author: ${d.authors || "Unknown"}<br>
                     Year: ${d.year || "N/A"}<br>
                     Abstract: ${d.abstract || "N/A"}
@@ -276,7 +291,7 @@
             });
 
             // Close side panel
-            d3.select("#closePanel").on("click", function() {
+            document.getElementById("closePanel").addEventListener("click", function() {
                 sidePanel.style("display", "none");
             });
 
@@ -285,7 +300,7 @@
                     const dx = d.target.x - d.source.x,
                           dy = d.target.y - d.source.y,
                           dr = Math.sqrt(dx * dx + dy * dy);
-                    return `M${d.source.x},${d.source.y}Q${(d.source.x + d.target.x) / 2},${(d.source.y + d.target.y) / 2 + dr / 2} ${d.target.x},${d.target.y}`;
+                    return `M${d.source.x},${d.source.y}A${dr},${dr} 0 0,1 ${d.target.x},${d.target.y}`; // Curved links
                 });
 
                 node.attr("cx", d => d.x)
@@ -316,7 +331,6 @@
             document.getElementById("nodeSizeToggle").addEventListener("change", function(event) {
                 isLarge = event.target.checked;
                 node.attr("r", d => d.label === "Understanding cybersecurity..." ? (isLarge ? 30 : 20) : (isLarge ? 15 : 10));
-                label.attr("dx", d => (d.label === "Understanding cybersecurity..." ? (isLarge ? 35 : 25) : (isLarge ? 20 : 15)));
             });
         }
 
