--- a/index.html
+++ b/index.html
@@ -26,20 +26,6 @@
             font-weight: bold;
             fill: black;
         }
-        .tooltip {
-            position: absolute;
-            text-align: center;
-            width: auto;
-            height: auto;
-            padding: 5px;
-            font: 14px sans-serif;
-            background: rgba(0, 0, 0, 0.7);
-            color: #fff;
-            border-radius: 5px;
-            pointer-events: none;
-            opacity: 0;
-            transition: opacity 0.3s;
-        }
         #legend {
             position: absolute;
             top: 100px;
@@ -65,49 +51,19 @@
             font-weight: bold;
             color: #333;
         }
-        #legendInfoPanel {
-            position: absolute;
-            top: 100px;
-            left: 250px;
-            width: 300px;
-            background: rgba(255, 255, 255, 0.95);
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-            display: none;
-        }
     </style>
 </head>
 <body>
-    <svg width="100%" height="100%"></svg>
+    <svg id="network-svg" width="100%" height="100%"></svg>
 
     <div id="legend">
         <strong>Legend</strong>
         <div id="legendItems"></div>
-        <button id="expandLegend" style="margin-top: 5px; cursor: pointer;">More Info</button>
-    </div>
-
-    <div id="legendInfoPanel">
-        <strong>Category Explanations</strong>
-        <button id="closeLegendPanel" style="float: right;">X</button>
-        <div id="legendDetails"></div>
     </div>
 
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script>
         const jsonURL = "https://raw.githubusercontent.com/Codekarish/CitationsPeerNetwork/master/graph.json";
-
-        // Define category explanations based on depth=3 approach
-        const categoryExplanations = {
-            "1": "Directly connected papers with significant citations and interdisciplinary impact.",
-            "2": "Niche papers with highly focused intra-group citations.",
-            "3": "Recent works with growing citations, mostly cited by the first two categories.",
-            "4": "Foundational papers forming the basis of the most cited works.",
-            "5": "Derived from depth-2 citations of category 3 papers, indicating early-stage influence.",
-            "6": "Papers cited mainly by category 5, often representing emerging subfields.",
-            "7": "Specialized research with citations primarily limited to niche areas.",
-            "8": "Papers appearing at depth-3, representing the outermost layer of influence."
-        };
 
         function loadGraph() {
             fetch(jsonURL)
@@ -124,8 +80,9 @@
             const width = window.innerWidth;
             const height = window.innerHeight;
 
-            const svg = d3.select("svg");
-            svg.selectAll("*").remove(); // Ensure previous graph is cleared
+            // Ensure SVG is properly initialized
+            const svg = d3.select("#network-svg");
+            svg.selectAll("*").remove(); // Remove previous graph
 
             const g = svg.append("g");
 
@@ -139,45 +96,12 @@
             const colorScale = d3.scaleOrdinal(d3.schemeCategory10)
                 .domain(graph.nodes.map(d => d.modularity || "Unknown"));
 
-            const categories = [...new Set(graph.nodes.map(d => d.modularity || "Unknown"))];
-
-            // Populate the legend dynamically
-            const legendItems = d3.select("#legendItems").html(""); // Clear previous items
-            categories.forEach(category => {
-                legendItems.append("div")
-                    .attr("class", "legend-item")
-                    .html(`
-                        <div class="legend-color-box" style="background: ${colorScale(category)};"></div>
-                        Category ${category} <span class="legend-info" data-category="${category}">[?]</span>
-                    `);
-            });
-
-            // Tooltip for category explanations
-            const tooltip = d3.select("body").append("div")
-                .attr("class", "tooltip")
-                .style("opacity", 0);
-
-            d3.selectAll(".legend-info").on("mouseover", function(event) {
-                const category = d3.select(this).attr("data-category");
-                tooltip.style("opacity", 1)
-                    .html(categoryExplanations[category] || "Derived based on citation depth of 3.")
-                    .style("left", (event.pageX + 10) + "px")
-                    .style("top", (event.pageY - 10) + "px");
-            }).on("mouseout", function() {
-                tooltip.style("opacity", 0);
-            });
-
-            // Expandable legend info panel
-            document.getElementById("expandLegend").addEventListener("click", function() {
-                document.getElementById("legendInfoPanel").style.display = "block";
-                document.getElementById("legendDetails").innerHTML = Object.entries(categoryExplanations)
-                    .map(([key, value]) => `<p><strong>Category ${key}:</strong> ${value}</p>`)
-                    .join("");
-            });
-
-            // Close legend panel
-            document.getElementById("closeLegendPanel").addEventListener("click", function() {
-                document.getElementById("legendInfoPanel").style.display = "none";
+            // Ensure nodes have positions
+            graph.nodes.forEach(node => {
+                if (!node.x || !node.y) {
+                    node.x = width / 2 + Math.random() * 200 - 100;
+                    node.y = height / 2 + Math.random() * 200 - 100;
+                }
             });
 
             // Force simulation
@@ -186,16 +110,18 @@
                 .force("charge", d3.forceManyBody().strength(-500))
                 .force("center", d3.forceCenter(width / 2, height / 2));
 
+            // Draw links (edges)
             const link = g.selectAll(".link")
                 .data(graph.links)
                 .enter().append("line")
                 .attr("class", "link")
                 .attr("stroke", "#aaa");
 
+            // Draw nodes
             const node = g.selectAll(".node")
                 .data(graph.nodes)
                 .enter().append("circle")
-                .attr("r", d => d.label === "Root Paper" ? 20 : 10) // Root node 2x larger
+                .attr("r", d => d.label === "Root Paper" ? 20 : 10) // Root node 2x bigger
                 .attr("fill", d => colorScale(d.modularity || "Unknown"))
                 .attr("class", "node")
                 .call(d3.drag()
@@ -203,6 +129,7 @@
                     .on("drag", dragged)
                     .on("end", dragEnded));
 
+            // Simulation updates
             simulation.on("tick", () => {
                 link.attr("x1", d => d.source.x)
                     .attr("y1", d => d.source.y)
@@ -212,6 +139,35 @@
                 node.attr("cx", d => d.x)
                     .attr("cy", d => d.y);
             });
+
+            // Update legend dynamically
+            const legendItems = d3.select("#legendItems").html("");
+            const categories = [...new Set(graph.nodes.map(d => d.modularity || "Unknown"))];
+            categories.forEach(category => {
+                legendItems.append("div")
+                    .attr("class", "legend-item")
+                    .html(`
+                        <div class="legend-color-box" style="background: ${colorScale(category)};"></div>
+                        Category ${category}
+                    `);
+            });
+        }
+
+        function dragStarted(event, d) {
+            if (!event.active) d3.forceSimulation().alphaTarget(0.3).restart();
+            d.fx = d.x;
+            d.fy = d.y;
+        }
+
+        function dragged(event, d) {
+            d.fx = event.x;
+            d.fy = event.y;
+        }
+
+        function dragEnded(event, d) {
+            if (!event.active) d3.forceSimulation().alphaTarget(0);
+            d.fx = null;
+            d.fy = null;
         }
 
         loadGraph();
